Добавил дерево рангов и таблицу состава

--- a/css/main.scss
+++ b/css/main.scss
@@ -1,4 +1,7 @@
-@import "cleare.scss";
-@import "mainpage.scss";
+@import "homePage.scss";
 @import "navigation.scss";
-@import "page1News.scss";
+@import "homePageNews.scss";
+@import "regitration.scss";
+@import "playersTree.scss";
+@import "playersTable.scss";
+@import "homePageProjects.scss";
