--- a/css/main.scss
+++ b/css/main.scss
@@ -2,6 +2,7 @@
 @import "navigation.scss";
 @import "homePageNews.scss";
 @import "regitration.scss";
+@import "login.scss";
 @import "playersTree.scss";
 @import "playersTable.scss";
 @import "homePageProjects.scss";
