--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -1,37 +1,45 @@
 <nav class="navbar navbar-inverse navbar-fixet-top">
-      <div class="container">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#/">
-            <img src="images/logo2.png" alt="logo"></a>
-        </div>
+  <div class="container">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#/">
+        <img src="images/logo2.png" alt="logo"></a>
+    </div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <li><a href="#/projects">Проекты</a></li>
-            <li><a href="#/gallery">Галлерея</a></li>
-            <!--<li><a href="#/players">Состав</a></li>-->
-            <li class="dropdown">
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="hidden-sm"><a href="#/projects">Проекты</a></li>
+        <li class="hidden-sm"><a href="#/gallery">Галлерея</a></li>
+        <!--<li><a href="#/players">Состав</a></li>-->
+        <li class="dropdown">
           <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Состав <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="#/players_tree">Древо рангов</a></li>
             <li><a href="#/players_table">Таблица</a></li>
           </ul>
         </li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="#/login">Войти</a></li>
-            <li><a href="#/registration">Регистрация</a></li>
-          </ul>
-        </div>
-        <!-- /.navbar-collapse -->
-      </div>
-      <!-- /.container-fluid -->
-    </nav>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#/login">Войти</a></li>
+        <li><a href="#/registration">Регистрация</a></li>
+      </ul>
+    </div>
+    <!-- /.navbar-collapse -->
+  </div>
+  <!-- /.container-fluid -->
+</nav>
+
+
+<div class="login_conteiner">
+  <span>Ваш аккаунт</span>
+  <input type="text" class="form-control" placeholder="Email" aria-describedby="sizing-addon3">
+  <input type="text" class="form-control" placeholder="Password" aria-describedby="sizing-addon3">
+  <button type="button" class="btn btn-default mybtn">Login</button> 
+</div>
