--- a/templates/players_tree.html
+++ b/templates/players_tree.html
@@ -1,14 +1,18 @@
-<div class="heroes_ranks_header">
-  <div class="bottons_tree">
-    <div class="player-head tree-player">
-      <a href="#/players_tree">Древо рангов</a>
-      <a href="#/players_table">Таблица игроков</a>
-    </div>
-  </div>
-  <div class="tree_header">
+<div class="container">
+  <div class="row heroes_ranks_header">
+  <div class="col-lg-6 tree_header">
     <span>Структура гильдии</span>
-  </div>
+  </div>  
+  <div class="col-lg-6 bottons_tree">
+      <div class="player-head tree-player">
+        <a href="#/players_tree">Древо рангов</a>
+        <a href="#/players_table">Таблица игроков</a>
+      </div>
+    </div>  
 </div>
+</div>
+ 
+
 <div class="heroes_ranks frac1">
   <div>
     <div><span>Глава</span><span>Царь</span></div>
