--- a/css/homePageNews.scss
+++ b/css/homePageNews.scss
@@ -1,6 +1,6 @@
 //Цвета
 //Шапка
-$header_text_color: #222f36; //Цвет текста в шапке 
+$header_text_color: #efefef; //Цвет текста в шапке 
 $header_bg_color: rgba(97, 134, 153, 0.00); //Цвет блоков новостей 
 //Блоки
 $body_headerText_color: #eaeaea; //Цвет текста в шапке 
@@ -16,39 +16,9 @@ $wrap_width: 400px;
   src: url(/fonts/T2LUHxYu.ttf);
   /* Путь к файлу со шрифтом */
 }
-.first-row {
-  position: relative;
-  height: 180px;
-}
-.header__text-main {
-  position: absolute;
-  top: 10px;
-  left: 50px;
-  font-family: main-font;
-  font-size: 35px;
-}
-.header__text-subtext {
-  position: absolute;
-  top: 100px;
-  left: 70px;
-  font-family: main-font;
-  font-size: 60px;
-}
-.header__project-active {
-  position: relative;
-}
-.header__project_text {
-  position: absolute;
-  top: 120px;
-  left: 570px;
-  font-family: main-font;
-  font-size: 30px;
-}
-.header__project_img {
-  position: absolute;
-  top: 70px;
-  left: 770px;
-}
+@import url(https://fonts.googleapis.com/css?family=Ubuntu+Mono:700&subset=latin,cyrillic);
+
+//News Blocks
 .content__img {
   float: left;
   margin-right: 10px;
