--- a/css/playersTree.scss
+++ b/css/playersTree.scss
@@ -5,7 +5,6 @@
   /* Путь к файлу со шрифтом */
 }
 
-
 .heroes_ranks_header{
   height: 100px;
 }
@@ -18,24 +17,20 @@
   font: 20px/30px Arial;
   text-shadow: 1px 1px 1px #000000;
   a{
-    font: 18px/20px main-font;
+    font: 18px/30px main-font;
     width: 250px;
     display: inline-block;
     color: #ea8f13;
     padding: 5px 10px;
     border: 2px solid darken(#ea8f13, 0.5);
     box-shadow: 0 0 40px rgba(255, 216, 0, 0.26) inset; 
-  }
-  a:nth-child(2){
-    margin-left: 50px;
+    margin-top: 3px;
   }
 } 
 .tree_header{
-  margin-left: 200px;
-  margin-top: 10px;
   span{
-    font: 35px/40px Arial;
-    color: #ad921f;
+    font: 55px/60px 'Sigmar One', cursive;
+    color: #ddb614;
     text-shadow: 1px 1px 1px #000000;
   }
 }
