--- a/templates/home.html
+++ b/templates/home.html
@@ -1,18 +1,19 @@
 <section class="page section-1">
-  <div class="container" ng-controller="NewsListCtrl">
+  <div class="container" ng-controller="NewsCtrl">
     <div class="row first-row">
       <p class="header__text-main">Добро пожаловать на сайт гильдии плохишей</p>
       <p class="header__text-subtext">Новости</p>
       <div class="header__project-active hidden-sm hidden-xs">
-        <p class="header__project_text">Сейчас в</p>
+        <p class="header__project_text">Сейчас играем в</p>
         <div class="header__project_img">
           <img src="images/icons/newsPage/activeLogo.png" />
         </div>
       </div>
     </div>
 
-    <div class="row" ng-repeat="new in news">
-      <div class="col-lg-12 test__conteiner">
+    <div class="row">
+    <div ng-repeat="new in news">
+      <div class="col-lg-10 test__conteiner">
         <div class="conteiner_content_img hidden-sm hidden-xs">
           <img alt="logo" ng-src={{new.image}}>
         </div>
@@ -21,171 +22,16 @@
         <button type="button" class="btn btn-link pull-right">Читать далее</button>
       </div>
     </div>
-  </div>
-</section>
-<section class="page section-2">
-  <div class="page__content__conteiner">
-    <div class="mypage-header">
-      <div class="header__text">
-        Проекты
-      </div>
-    </div>
-    <div class="page-content">
-      <div class="content__item small-item">
-        <div class="content__img">
-         <div class="conteiner_project_img">
-            <img class="content_img_logo active__hover_img" alt="logo" src="images/icons/page4/Never.png" />
-            <img class="content_img_logo" alt="logo" src="images/icons/page4/Nevercolor.png" />
-        </div>
-        </div>
-        <div class="content__head">
-          <div class="head__text">
-            Neverwinter
-          </div>
-          <div class="content__body">
-            <div class="content__text">
-              <p>For our long-standing fans and loyal players, we would like to say thank you and show our appreciatio prior to January 23, 2015 and who upgrade their acco</p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="content__item small-item">
-        <div class="content__img">
-          <div class="conteiner_project_img">
-            <img class="content_img_logo active__hover_img" alt="logo" src="images/icons/page4/Skyforge.png" />
-            <img class="content_img_logo" alt="logo" src="images/icons/page4/Skyforgecolor.png" />
 
-          </div>
-        </div>
-        <div class="content__head">
-          <div class="head__text">
-            Skyforge
-          </div>
-          <div class="content__body">
-            <div class="content__text">
-              <p>For our long-standing fans and loyal players, we would like to say thank you and show our appreciatio prior to January 23, 2015 and who upgrade their acco</p>
-            </div>
-          </div>
-
-        </div>
-      </div>
-      <div class="content__item small-item">
-        <div class="content__img">
-          <div class="conteiner_project_img">
-            <img class="content_img_logo active__hover_img" alt="logo" src="images/icons/page4/AA.png" />
-            <img class="content_img_logo" alt="logo" src="images/icons/page4/AAcolor.png" />
-
-          </div>
-        </div>
-        <div class="content__head">
-          <div class="head__text">
-            ArcheAge
-          </div>
-          <div class="content__body">
-            <div class="content__text">
-              <p>In our January 23 FAQ, we wanted to clarify that Guild Wars 2: Heart of Thorns would not be a stand-a(Factions® and Nightfall®), but instead would be a tr</p>
-            </div>
-          </div>
-
-        </div>
-      </div>
-      <div class="content__item small-item">
-        <div class="content__img">
-          <div class="conteiner_project_img">
-            <img class="content_img_logo active__hover_img" alt="logo" src="images/icons/page4/GW2.png" />
-            <img class="content_img_logo" alt="logo" src="images/icons/page4/GW2color.png" />
-
-          </div>
-        </div>
-        <div class="content__head">
-          <div class="head__text">
-            GuildWars2
-          </div>
-          <div class="content__body">
-            <div class="content__text">
-              <p>For all players who purchased the Guild Wars 2 core game from our website and registered it between Jrs 2: Heart of Thorns, we will automatically refund w</p>
-            </div>
-          </div>
-
-        </div>
-      </div>
-      <div class="content__item small-item">
-        <div class="content__img">
-          <div class="conteiner_project_img">
-            <img class="content_img_logo active__hover_img" alt="logo" src="images/icons/page4/Tera.png" />
-            <img class="content_img_logo" alt="logo" src="images/icons/page4/Teracolor.png" />
-
-          </div>
-        </div>
-        <div class="content__head">
-          <div class="head__text">
-            Tera
-          </div>
-          <div class="content__body">
-            <div class="content__text">
-              <p>For all players who purchased the Guild Wars 2 core game from our website and registered it between Jrs 2: Heart of Thorns, we will automatically refund w</p>
-            </div>
-          </div>
-
-        </div>
-      </div>
-      <div class="content__item small-item">
-        <div class="content__img">
-          <div class="conteiner_project_img">
-            <img class="content_img_logo active__hover_img" alt="logo" src="images/icons/page4/WOW.png" />
-            <img class="content_img_logo" alt="logo" src="images/icons/page4/WOWcolor.png" />
-
-          </div>
-        </div>
-        <div class="content__head">
-          <div class="head__text">
-            WorldOfWarcraft
-          </div>
-          <div class="content__body">
-            <div class="content__text">
-              <p>For all players who purchased the Guild Wars 2 core game from our website and registered it between Jrs 2: Heart of Thorns, we will automatically refund w</p>
-            </div>
-          </div>
-
-        </div>
-      </div>
+    <div class="col-lg-2 sidebar hidden-md hidden-sm hidden-xs">
+      <ul>
+        <li>Статус сервера</li>
+        <li>TeamSpeak</li>
+        <li>Чат</li>
+        <li>Набор</li>
+      </ul>
+       </div>
     </div>
   </div>
-</section>
-<section class="page section-3">
-  <div class="container">
-    <div id="mycarousel" class="carousel slide" data-ride="carousel" data-interval="3000">
-      <!-- Indicators -->
-      <ol class="carousel-indicators">
-        <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#mycarousel" data-slide-to="1"></li>
-        <li data-target="#mycarousel" data-slide-to="2"></li>
-        <li data-target="#mycarousel" data-slide-to="3"></li>
-        <li data-target="#mycarousel" data-slide-to="4"></li>
-        <li data-target="#mycarousel" data-slide-to="5"></li>
-        <li data-target="#mycarousel" data-slide-to="6"></li>
-      </ol>
 
-      <!-- Wrapper for slides -->
-      <div class="carousel-inner" role="listbox">
-        <div class="item active"><img src="images/carusel/001.jpg" alt="img"></div>
-        <div class="item"><img src="images/carusel/002.jpg" alt="img"></div>
-        <div class="item"><img src="images/carusel/003.jpg" alt="img"></div>
-        <div class="item"><img src="images/carusel/004.jpg" alt="img"></div>
-        <div class="item"><img src="images/carusel/005.jpg" alt="img"></div>
-        <div class="item"><img src="images/carusel/006.jpg" alt="img"></div>
-        <div class="item"><img src="images/carusel/007.jpg" alt="img"></div>
-      </div>
-
-      <!-- Controls -->
-      <a class="left carousel-control" href="#mycarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="right carousel-control" href="#mycarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
-  </div>
 </section>
