--- a/templates/projects.html
+++ b/templates/projects.html
@@ -1,4 +1,4 @@
-<section class="page section-2">
+<section id="section4" class="page section-4">
   <div class="page__content__conteiner">
     <div class="mypage-header">
       <div class="header__text">
