--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -1,37 +1,3 @@
-<section class="page section-3">
-  <div class="container">
-    <div id="mycarousel" class="carousel slide" data-ride="carousel" data-interval="3000">
-      <!-- Indicators -->
-      <ol class="carousel-indicators">
-        <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#mycarousel" data-slide-to="1"></li>
-        <li data-target="#mycarousel" data-slide-to="2"></li>
-        <li data-target="#mycarousel" data-slide-to="3"></li>
-        <li data-target="#mycarousel" data-slide-to="4"></li>
-        <li data-target="#mycarousel" data-slide-to="5"></li>
-        <li data-target="#mycarousel" data-slide-to="6"></li>
-      </ol>
-
-      <!-- Wrapper for slides -->
-      <div class="carousel-inner" role="listbox">
-        <div class="item active"><img src="images/carusel/001.jpg" alt="img"></div>
-        <div class="item"><img src="images/carusel/002.jpg" alt="img"></div>
-        <div class="item"><img src="images/carusel/003.jpg" alt="img"></div>
-        <div class="item"><img src="images/carusel/004.jpg" alt="img"></div>
-        <div class="item"><img src="images/carusel/005.jpg" alt="img"></div>
-        <div class="item"><img src="images/carusel/006.jpg" alt="img"></div>
-        <div class="item"><img src="images/carusel/007.jpg" alt="img"></div>
-      </div>
-
-      <!-- Controls -->
-      <a class="left carousel-control" href="#mycarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="right carousel-control" href="#mycarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
-  </div>
+<section id="section3" class="page section-3">
+ 
 </section>
