Добавлена страница достижений, поправлена главная страница

--- a/css/general/footer.scss
+++ b/css/general/footer.scss
@@ -64,12 +64,12 @@ footer {
 }
 .site__map {
   margin: 0 auto;
-  width: 120px;
+  width: 150px;
 }
 .head_site__map {
   font-size: 20px;
   border-bottom: 1px solid #000000;
-  margin: 3px 0;
+  margin: 3px 0 0 0;
 }
 .site__map-left {
   float: left;
