--- a/css/main.scss
+++ b/css/main.scss
@@ -3,8 +3,10 @@
 @import "general/footer.scss";
 @import "general/registration.scss";
 @import "general/navigation.scss";
-
+@import "general/contact.scss";
+  
 @import "achievements.scss";
+@import "gallery.scss";
 @import "playersTree.scss";
 @import "playersTable.scss";
 @import "projects.scss";
