--- a/templates/general/footer.html
+++ b/templates/general/footer.html
@@ -5,26 +5,26 @@
       <div class="content-table copyright">
         <a href="#/">
           <img class="" src="/images/KymStroi.png" /></a>
-        <br /> Copyright © 2015 КумСтрой
+        <br /> Copyright © 2015 <br /> КумСтрой
       </div>
       <div class="content-table footer__logo">
-        <div class="footer__logo_LogoText">Плохиши&nbsp;&nbsp;Bad Gues</div>
+        <div class="footer__logo_LogoText">Плохиши&nbsp;&nbsp;Bad Guys</div>
        <!-- <img class="footer__logo_img" src="/images/footerLogo.png">-->
         <div class="footer__logo_text">Да мы такие :)</div>
       </div>
       <div class="content-table">
         <div class="site__map">
           <div class="head_site__map">
-            Site Map
+            Карта сайта
           </div>
           <div class="site__map-left">
-            <a href="#/" class="sitemap__link">Home</a>
-            <a href="#/achievements" class="sitemap__link">Achivs</a>
-            <a href="#/players_table" class="sitemap__link">Players</a>
+            <a href="#/" class="sitemap__link">Главная</a>
+            <a href="#/achievements" class="sitemap__link">Данжи</a>
+            <a href="#/players_table" class="sitemap__link">Игроки</a>
           </div>
           <div class="site__map-right">
-            <a href="#/projects" class="sitemap__link">Projects</a>
-            <a href="#/about" class="sitemap__link">About</a>
+            <a href="#/projects" class="sitemap__link">Проекты</a>
+            <a href="#/about" class="sitemap__link">Помощи нет</a>
           </div>
         </div>
       </div>
