--- a/templates/general/navigation.html
+++ b/templates/general/navigation.html
@@ -32,6 +32,7 @@
       <ul class="nav navbar-nav navbar-right">
         <!--<li><a href="#/login" ng-click="show=!show">Войти</a></li>-->
         <li><a href="" ng-click="show=!show"><span class="main-symvol">В</span>ойти</a></li>
+        <li><a class="dev-contact" href="">&#10000;</a></li>
       </ul>
     </div>
     <!-- /.navbar-collapse -->
