--- a/css/achievements.scss
+++ b/css/achievements.scss
@@ -10,195 +10,165 @@
     @include font-properties;
     font-size: 45px;
   }
-  .tabs{
-    margin-bottom: 10px;
-    ul{
-      margin: 0;
-      padding: 0;
-      list-style-type: 0;
-      li{
-        text-align: center;
-        display: inline-block;
-        width: $widthLi / 4;
-        height: 40px;
-        @include bg-nav-linear-gradient;
+  .btn-group{
+    .btn{
+      border: 0px solid transparent;
+      border-radius: 0;
+      padding: 14px;
+      margin-right: 5px;
+      font-size: 16px;
+    }
+    .active{
+      @include bg-active-acivementsTab-linear-gradient;
+    }
+  }
+  .btn-success{
+    color: #fff;
+    @include bg-acivementsTab-linear-gradient;
+    //border-color: #000000;
+  }
+  .btn-success-active .btn-success.active, .btn-success:active, .btn-success:hover, .btn-success.active.focus, .btn-success.active:focus,{
+    color: #fff;
+    @include bg-active-acivementsTab-linear-gradient;
+    //border-color: #000000;
+  }
+  .dungeon_main-conteiner {
+    overflow: hidden;
+    position: relative;
+    height: 200px;
+    width: 100%;
+    
+    @media only screen and (max-width: 550px) {
+      .col-width {
+        width: 100%;
       }
-      li.active{
-         @include bg-active-tab-linear-gradient;
+    }
+    @media only screen and (min-width: 550px) {
+      .col-width {
+        width: 100%;
+      }
+    }
+    @media only screen and (min-width: 970px) {
+      .col-width {
+        width: 710px;
+      }
+    }
+    @media only screen and (min-width: 1200px) {
+      .col-width {
+        width: 1170px;
+      }
+    }
+    .d-col-artifact {
+      float: left;
+      width: 200px;
+    }
+    .d-col-bosses {
+      float: left;
+      min-width: 400px;
+      max-width: 550px
+    }
+    .d-col-info {
+      float: left;
+      width: 200px;
+    }
+    .d-col-icon {
+      float: right;
+      width: 170px;
+    }
+    margin-top: 10px;
+    .dungeon_conteiner {
+      text-shadow: 0 0 2px #000000;
+      font-size: 16px;
+      width: 1140px;
+      background-color: rgba(0, 0, 0, 0.78);
+      ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+      }
+    }
+    .dungeon_collection_img {
+      width: 100%;
+      img {
+        width: 100%;
+      }
+    }
+    .dungeon-header {
+      position: absolute;
+      top: 0;
+      left: 200px;
+      font-size: 28px;
+      font-family: cursive;
+      margin-left: 5px;
+    }
+    table {
+      margin: 40px 0 0 10px;
+    }
+    .boss-name {
+      line-height: 23px;
+      vertical-align: top;
+      margin: 0 5px;
+    }
+    div.kill-chek {
+      display: inline-block;
+      height: 20px;
+      width: 20px;
+      background-image: url(/images/icons/sprites.png);
+      background-position: -536px -29px;
+    }
+    div.killed {
+      background-image: url(/images/icons/sprites.png);
+      background-position: -536px -8px;
+    }
+    a.kill-chek {
+      display: inline-block;
+      height: 20px;
+      width: 32px;
+      cursor: default;
+      background-image: url(/images/icons/sprites.png);
+      background-position: -489px -48px;
+    }
+    a.killed {
+      background-image: url(/images/icons/sprites.png);
+      background-position: -489px -8px;
+      cursor: pointer;
+    }
+    .center-info {
+      margin: 40px 0 0 10px;
+      :nth-child(2) {
+        color: yellow;
       }
       a{
-        //border: 1px solid white;
-        display: block;
-        width: 100%;
-        height: 100%;
-        font: 22px/38px Arial;
-        color: aliceblue;
+        color: #ffffff;
+        text-decoration: underline;
       }
     }
-  }
-  .dungeon-tabs {
-    a {
-      color: #ffffff;
-      @include bg-nav-linear-gradient;
+    .dundgeon_map {
+      width: 150px;
+      height: 40px;
+      background-color: black;
+      opacity: 0.7;
     }
-    .active a {
-      @include bg-active-tab-linear-gradient;
+    .round-chart {
+      margin: 25px 20px 0 0;
+      text-align: center;
+      width: 152px;
+      height: 152px;
+      background-image: url(/images/icons/sprites.png);
+      background-position: -321px -3px;
+      //border: 1px solid;
+      span {
+        display: block;
+        font: 35px/35px 'Orbitron';
+        position: relative;
+        top: 33%;
+      }
     }
-    .nav-tabs.nav-justified>li>a {
-      margin-right: 5px;
-    }
-    li,
-    a {
-      font-size: 16px;
-      border-radius: 0px 0px 0px 0px;
-      border: 0px solid #ffffff;
-    }
-  }
-  .dungeon_main-conteiner1{
-    margin-top: 10px;
-  
-  .dungeon_conteiner{
-    //margin-bottom: 20px;
-    text-shadow: 0 0 2px #000000;
-    font-size: 16px;
-    margin: 0 auto;
-    width: 980px;
-    height: 220px;
-    background-color: rgba(0, 0, 0, 0.17);
-    background-image: url(/images/icons/achivements/dungeons/po1.jpg);
-    background-position: -9px -9px;
-    ul{
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+    .kill-all{
+        color: #adff2f;
+      }
+    .kill-not-all{
+      color: #ffff00;
     }
   }
-  .dungeon-header{
-    font-size: 28px;
-    font-family: cursive;
-    margin-left: 5px;
-  }
-  .boss-name{
-    line-height: 23px;
-    vertical-align: top;
-    margin: 0 5px;
-  }
-  div.kill-chek{
-    display: inline-block;
-    height: 20px;
-    width: 20px;
-  }
-  div.killed{
-    background-image: url(/images/icons/sprites.png);
-    background-position: -536px -8px;
-    //border: 1px solid;
-  }
-  a.kill-chek{
-    display: inline-block;
-    height: 20px;
-    width: 32px;
-    background-image: url(/images/icons/sprites.png);
-    background-position: -489px -48px;
-  }
-  a.killed{
-    background-image: url(/images/icons/sprites.png);
-    background-position: -489px -8px;
-    //border: 1px solid;
-  }
-  .center-info{
-    margin-top: 60px;
-    :nth-child(2){
-      color: yellow;
-    }
-  }
-  .round-chart{
-    margin-left: 40px;
-    text-align: center;
-    width: 152px;
-    height: 152px;      
-    background-image: url(/images/icons/sprites.png);
-    background-position: -321px -3px;
-    //border: 1px solid;
-    span{
-          display: block;
-    font: 35px/35px 'Orbitron';
-    color: greenyellow;
-    position: relative;
-    top: 33%;
-    }
-  }
-  }
-  .dungeon_main-conteiner2{
-    margin-top: 10px;
-  .dungeon_conteiner{
-    //margin-bottom: 20px;
-    text-shadow: 0 0 2px #000000;
-    font-size: 16px;
-    margin: 0 auto;
-    width: 980px;
-    height: 220px;
-    background-color: rgba(0, 0, 0, 0.17);
-    background-image: url(/images/icons/achivements/dungeons/lednik.jpg);
-    background-position: -9px -209px;
-    ul{
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    }
-  }
-  .dungeon-header{
-    font-size: 28px;
-    font-family: cursive;
-    margin-left: 5px;
-  }
-  .boss-name{
-    line-height: 23px;
-    vertical-align: top;
-    margin: 0 5px;
-  }
-  div.kill-chek{
-    display: inline-block;
-    height: 20px;
-    width: 20px;
-  }
-  div.killed{
-    background-image: url(/images/icons/sprites.png);
-    background-position: -536px -8px;
-    //border: 1px solid;
-  }
-  a.kill-chek{
-    display: inline-block;
-    height: 20px;
-    width: 32px;
-    background-image: url(/images/icons/sprites.png);
-    background-position: -489px -48px;
-  }
-  a.killed{
-    background-image: url(/images/icons/sprites.png);
-    background-position: -489px -8px;
-    //border: 1px solid;
-  }
-  .center-info{
-    margin-top: 60px;
-    :nth-child(2){
-      color: yellow;
-    }
-  }
-  .round-chart{
-    margin-left: 40px;
-    text-align: center;
-    width: 152px;
-    height: 152px;      
-    background-image: url(/images/icons/sprites.png);
-    background-position: -321px -3px;
-    //border: 1px solid;
-    span{
-          display: block;
-    font: 35px/35px 'Orbitron';
-    color: greenyellow;
-    position: relative;
-    top: 33%;
-    }
-  }
-}
 }
