--- a/css/general/navigation.scss
+++ b/css/general/navigation.scss
@@ -22,6 +22,10 @@ nav{
   color: $header_text_color;
   text-shadow: 1px 1px 3px #000000;
 }
+.dev-contact{
+  font-size: 20px;
+  color: #000000;
+}
 #my-navigation{
   li>a>.main-symvol{
   font-size: 18px;
