--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -1,3 +1,5 @@
-<section id="section3" class="page section-3">
- 
+<section id="section3">
+ <div class="container">
+   <br><br><br><span>В разработке</span>
+ </div>
 </section>
