--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -8,45 +8,81 @@
         </div>
       </div>
       <div class="col-lg-8 col-md-8 col-sm-12">
-        <div class="image-main"><img src="images/icons/newsPage/Logo.png" alt="images/icons/newsPage/Logo.png"></div>
+        <div class="image-main"><img src="images/icons/homepage/logo.png" alt="images/icons/homepage/Logo.png"></div>
       </div>
       <div class="col-lg-2 col-md-2 hidden-sm hidden-xs">
         <div class="frame-img">
           <div class="image-logo">
-          Bad Gues
+            Bad Guys
           </div>
         </div>
       </div>
     </div>
-      <div class="row">
-        <div class="col-lg-12">
-          <p class="header__text-main">Новости</p>
-        </div>
-        <div ng-repeat="new in news | orderBy: 'date' | limitTo: 4">
-          <div class="col-lg-9 col-md-12 test__conteiner">
-            <div class="conteiner_content_img hidden-sm hidden-xs">
-              <img alt="logo" ng-src={{new.image}}>
-            </div>
-            <p class="myhead__text">{{new.headtext}}</p>
-            <span class="myhead__date">{{new.date  | date:'dd-MM-yyyy'}}</span>
-            <p class="content__text">{{new.contenttext}}</p>
-            <button type="button" class="btn btn-link pull-right">Читать далее</button>
-          </div>
-        </div>
+    <div class="row">
+      <div class="col-lg-12">
+        <p class="header__text-main">Новости</p>
+      </div>
+    </div>
 
-        <div class="col-lg-2 sidebar hidden-md hidden-sm hidden-xs">
+    <div class="content_conteiner">
+      <div class="row" ng-repeat="new in news | orderBy: 'date' | limitTo: 4">
+        <div class="col-width news__conteiner">
+          <div class="conteiner_content_img hidden-xs">
+            <div class="content__img">
+            <img alt="logo" ng-src={{new.image}}>
+            </div>
+          </div>
+          <p class="myhead__text">{{new.headtext}}</p>
+          <span class="myhead__date">{{new.date  | date:'dd-MM-yyyy'}}</span>
+          <p class="content__text">{{new.contenttext}}</p>
+          <button type="button" class="btn btn-link pull-right">Читать далее</button>
+        </div>
+      </div>
+    </div>
+    <div class="sidebar hidden-sm hidden-xs">
+      <div class="sidebar_conteiner">
+        <div class="voice-chats_conteiner">
+          <p>Связь</p>
           <ul>
-            <li>Статус сервера</li>
-            <li>TeamSpeak</li>
-            <li>Чат</li>
-            <li>Набор</li>
-            <li><b>Полезные ссылки:</b></li>
-            <li><a href="#">Офф сайт</a></li>
-            <li><a href="#">Гайды по проффесиям</a></li>
-            <li><a href="#">Гайды по классам</a></li>
-            <li><a href="#">Прочее</a></li>
+            <li>
+              <div class="voice-chat_sprite team-speak"></div>
+              <span>TeamSpeak</span><br>
+              <span>199.175.48.21</span>
+            </li>
+            <li>
+              <div class="voice-chat_sprite mumble"></div>
+              <span>Mumble</span><br>
+              <span>598362345</span>
+            </li>
+          </ul>
+        </div>
+        <div class="server-status_conteiner">
+          <p>Статус сервера</p>
+          <div class="server-status_sprite"></div>
+          <span>Название сервера</span>
+        </div>
+        <div class="guild-requirement_conteiner">
+          <p>Набор в гильдию</p>
+          <ul>
+            <li class="class_sprite blade_master"></li>
+            <li class="class_sprite destroyer"></li>
+            <li class="class_sprite summoner"></li>
+            <li class="class_sprite force_master"></li>
+            <li class="class_sprite kung_fu_master"></li>
+            <li class="class_sprite assasin"></li>
+            <li class="class_sprite blade_dancer"></li>
+          </ul>
+        </div>
+        <div class="useful-links_conteiner">
+          <p>Полезное</p>
+          <ul>
+            <li>- <a href="">Оффициальный сайт</a></li>
+            <li>- <a href="">Гайд по профессиям</a></li>
+            <li>- <a href="">Гайд по классам</a></li>
+            <li>- <a href="">Прочее</a></li>
           </ul>
         </div>
       </div>
     </div>
+  </div>
 </section>
